// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid Component Should to show items when images are loaded 1`] = `
<Fragment>
  <h3
    className="mb-3"
  >
    Hello World
  </h3>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-4 col-md-3 col-lg-2"
      key="1"
    >
      <GifGridItem
        gif={
          Object {
            "id": "1",
            "title": "Hello World",
            "url": "http://localhost:3000/image.png",
          }
        }
      />
    </div>
    <div
      className="col-xs-6 col-sm-4 col-md-3 col-lg-2"
      key="2"
    >
      <GifGridItem
        gif={
          Object {
            "id": "2",
            "title": "Hello World 1",
            "url": "http://localhost:3000/image1.png",
          }
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`GifGrid Component Should to show the component correctly 1`] = `
<Fragment>
  <h3
    className="mb-3"
  >
    Hello World
  </h3>
  <div
    className="row"
  >
    <h4
      className="text-center"
    >
      Loading...
    </h4>
  </div>
</Fragment>
`;
